# ITIR-suite

./: .gfx803-requirements_clean_cleaned_lol.txt.kate-swp  .gitignore  .gitleaksignore  .gitmodules  .venv  CHANGELOG.md  COMPACTIFIED_CONTEXT.md  ONBOARDING.md  README.md  ROADMAP.md  TODO.md  _mirror  architecture.md  codex_ingest.py  collect_requirements.sh  devlog.md  env_init.sh  gfx803-requirements_clean_cleaned_lol.txt  heartbeat.itir-statibaker-kanboard-completion-supermanager.json  heartbeat.itir-statibaker-supermanager.json  heartbeat.statibaker-bridge-contract-manager.json  heartbeat.statibaker-kanboard-adapter-manager.json  heartbeat.statibaker-kanboard-bootstrap-manager.json  heartbeat.statibaker-kanboard-idempotency-manager.json  heartbeat.statibaker-kanboard-live-sync-manager.json  heartbeat.statibaker-kanboard-local-manager.json  heartbeat.statibaker-kanboard-promotion-governance-manager.json  heartbeat.statibaker-kanboard-report-dashboard-manager.json  heartbeat.statibaker-kanboard-stabilization-manager.json  heartbeat.statibaker-runsheet-dashboard-manager.json  heartbeat.statibaker-sensiblaw-bridge-source-manager.json  heartbeat.statibaker-sensiblaw-extraction-manager.json  heartbeat.statibaker-verification-governance-manager.json  heartbeat.supermanager.json  host-to-compat-container.sh  itir_overlay_flags.py  normalized_artifact_join.py  plan.md  pytest.ini  requirements.txt  (+28 more)
TEMP_zos_sl_bridge_impl/python/: pyproject.toml
itir-mcp/: CHANGELOG.md  README.md  TODO.md  pyproject.toml
itir-mcp/docs/: docstore_obsidian.md  interfaces.md
sb/: __init__.py
(+1119 files in other folders)
