[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "itir-mcp"
version = "0.2.0"
description = "Suite-level MCP adapter scaffold for ITIR-suite."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
transport = ["mcp>=1.0.0"]

[project.scripts]
itir-mcp = "itir_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
