[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zos-pipeline"
version = "0.1.0"
description = "SL ↔ erdfa/Kant ↔ Zelph bridge prototype with lattice resonance and manifold-aware retrieval"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
